--- a/index/index.css
+++ b/index/index.css
@@ -1,4 +1,4 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 body {
   font-family: "Raleway", "Sans serif";
   margin: 0;
