--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,6 @@ body {
   font-family: "Raleway", "Sans serif";
   margin: 0;
 }
-
-
 a{
   color: inherit;
   text-decoration: none;}
@@ -567,6 +565,19 @@ button .submit__submitTxt {      /*-------------bouton "RECHERCHER" à changer s
     margin-left: -33px;
   }
 
+  .headerImg{
+    margin-left: -18px;
+  }
+
+  .headerSignup{
+    margin-right: -18px;
+  }
+
+  .main{
+    width: 107%;
+    margin-left: -18px;
+  }
+
   .hostingPopularTitle {
     margin-bottom: 23px;
   }
@@ -576,9 +587,6 @@ button .submit__submitTxt {      /*-------------bouton "RECHERCHER" à changer s
    row-gap: 1.3rem;
    padding-top: -25px;
   }
-
-
-
 
   .hostingMain {
     border-radius: 0.1rem;
@@ -601,8 +609,71 @@ button .submit__submitTxt {      /*-------------bouton "RECHERCHER" à changer s
     margin-top: 30px;
   }
 
+  .activityCard {
+    column-gap: 0.75rem;
+    row-gap: 0.75rem;
+    margin-bottom: -10px;
+  }
+  .activityTitle {
+    margin-top: -37px;
+    line-height: 0.5;
+  }
+}
 
+                                                             @media screen and (max-width: 650px) {
 
+  .hosting {
+    display: grid;
+    column-gap: 2rem;
+    grid-template-columns: 6fr 3fr;
+    width: 119%;
+    margin-left: -33px;
+  }
+
+  .headerImg{
+    margin-left: -18px;
+  }
+
+  .headerSignup{
+    margin-right: -18px;
+  }
+  
+  .main{
+    width: 107%;
+    margin-left: -18px;
+  }
+
+  .hostingPopularTitle {
+    margin-bottom: 23px;
+  }
+  .hostingPopular {
+   border-radius: 0.1rem;
+   column-gap: 1.3rem;
+   row-gap: 1.3rem;
+   padding-top: -25px;
+   
+  }
+
+  .hostingMain {
+    border-radius: 0.1rem;
+    background: #ffffff;
+    column-gap: 1.65rem;
+    row-gap: 1.65rem;
+    margin-top: -27px;
+  }
+  
+  .hostingMainHeaderTitle {
+    margin-bottom: 21px;
+    line-height: 0.8;
+  }
+  .hostingMainCard{
+    height: 107%;
+  }
+
+  .hostingMainViewmore {
+    font-weight: bold;
+    margin-top: 30px;
+  }
 
   .activityCard {
     column-gap: 0.75rem;
@@ -615,11 +686,7 @@ button .submit__submitTxt {      /*-------------bouton "RECHERCHER" à changer s
     line-height: 0.5;
    
   }
-
 }
-
-
-
 
 
 
@@ -798,4 +865,3 @@ button .submit__submitTxt {      /*-------------bouton "RECHERCHER" à changer s
     margin-bottom: 0;
   }
 }
-
